[package]
name = "nbytes"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/enarx/nbytes"
repository = "https://github.com/enarx/nbytes"
description = "Rust compile-time evaluation of byte unit conversions"
readme = "README.md"
keywords = ["units", "bytes"]
categories = ["development-tools", "rust-patterns"]
exclude = [ ".gitignore", ".github/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/nbytes", workflow = "test" }
#github = { repository = "enarx/nbytes", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/nbytes" }
is-it-maintained-open-issues = { repository = "enarx/nbytes" }
